update eclipse bootstrap scripts
* they will be obsoleted soon
* there are better ways to do this on github
  but even those are nearly obsoleted
* oomph is the way to do it now